delete tickets, post tickets

--- a/src/components/styles/ticket.Item.module.css
+++ b/src/components/styles/ticket.Item.module.css
@@ -1,4 +1,11 @@
 .ticket_item {
     align-content: center;
-    width: 80%;
+    /* width: 80%; */
+    background-color: white;
+    margin: 4px;
+    width: fit-content;
+}
+
+.ticket_delete:hover {
+    cursor: pointer;
 }
