--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ body {
 header select {
     position: absolute;
     left: 25px;
+}
+
+select {
     border-radius: 50px;
 }
 
@@ -25,5 +28,5 @@ h1 {
 }
 
 .tickets {
-    
+    color: black;
 }
