--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../assets/background.jpg');
+    background-image: url('../assets/images/background.jpg');
     margin: 10px;
 }
 #root {
